# rgbd_person_tracking

human_mapping/: CMakeLists.txt  package.xml
human_mapping/config/: human_detection.rviz
human_mapping/launch/: human_mapping.launch
human_mapping/src/: human_mapping_node.cpp
people_detection/launch/: people_detection_complete.launch
visual_tracker/: CMakeLists.txt
visual_tracker/include/tracker/: Tracker.h
visual_tracker/src/: Kalman.cpp  Tracker.cpp
